Add gradient and product block then add new ProductActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".WebViewActivity" />
-        <activity android:name=".ActivityTop50"></activity>
+        <activity android:name=".activity.ActivityTop50" />
+        <activity android:name=".activity.ActivityProduct"></activity>
     </application>
 
 </manifest>
