--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".FireboxApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,9 +31,8 @@
         <!-- <activity android:name=".activity.ActivityWebView" /> -->
         <activity android:name=".activity.ActivityCategory" />
         <activity android:name=".activity.ActivityProduct" />
-        <activity android:name=".activity.ActivitySearchable">
-
-        </activity>
+        <activity android:name=".activity.ActivitySearchable" />
+        
     </application>
 
 </manifest>
